2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Move check for proper `printf' "%.2" behavior to runtime.

	* rcstime.c (proper_dot_2): New static func.
	(time2date): For #if has_printf_dot FOO #else BAR #endif
	blocks, replace with `proper_dot_2 (FOO, BAR)'.
	* conf.sh: Remove check for proper `printf' "%.2" behavior.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume <limits.h> defines `LONG_MAX'.

	* conf.sh: Remove computation of `LONG_MAX'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sigblock' check to configure.in.

	* rcsutil.c: Do s/has_sigblock/defined HAVE_SIGBLOCK/g;
	* conf.sh: Remove check for `sigblock'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] When using `sigblock', compute `sigmask' manually.

	* rcsutil.c [has_sigblock] (setup_catchsig): Don't
	use `sigmask; instead, do the subtract and shift manually.
	* conf.sh: Remove computation of `sigmask'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `sigaction' check to configure.in.

	* rcsutil.c: Do s/has_sigaction/defined HAVE_SIGACTION/g.
	* conf.sh: Remove check for `sigaction'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume `sigaction.sa_sigaction' is POSIX.

	* rcsutil.c: For #if has_sa_sigaction FOO #else
	BAR #endif block, delete everything except FOO.
	* conf.sh: Remove check for `sigaction.sa_sigaction'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move `psignal' check to configure.in.

	* rcsutil.c: Do s/has_psignal/defined HAVE_PSIGNAL/g.
	* conf.sh: Remove check for `psignal'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume <utime.h> declares `struct utimbuf'.

	* rcsbase.h [!has_utimbuf] (utimbuf): Delete struct decl.
	* conf.sh: Remove check for `struct utimbuf'.

2010-02-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Presume availability of `chmod'.

	* ci.c: For #if bad_chmod_close FOO #else BAR #endif
	block, delete everything except BAR.